<resources>
    <string name="app_name">P8_Group3</string>
    <string name="fa_icon_user">&#xf2c0;</string>
    <string name="fa_icon_lock">&#xf023;</string>
    <string name="socialising_for_parents">- Socialising for parents -</string>
    <string name="chimp">Chimp</string>
    <string name="name">Name</string>
    <string name="children">Children</string>
    <string name="user_name">Username</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="create_account">Create account</string>
    <string name="next">Next</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="email_address">Email Address</string>
    <string name="finish">Finish</string>
    <string name="number_of_children">Number of children</string>
    <string name="city_of_residence">City of Residence</string>
    <string name="age_of_children">Age of children</string>
    <string name="age">Age of children</string>
    <string name="ageProfile">Age</string>
    <string name="city">City</string>
    <string name="languages">Languages:</string>
    <string name="english_german_spanish">English, German, Spanish</string>
    <string name="about">About</string>
    <string name="i_am_active_and_i_like_to_socialise">I am active and I like to socialise</string>
    <string name="hobbies">Hobbies</string>
    <string name="ageParent">Age</string>
    <string name="forgot_my_password">Forgot my password</string>
    <string name="edit">Edit</string>
    <string name="settings">Settings</string>
    <string name="history">History</string>
    <string name="forum">Forum</string>
    <string name="events">Events</string>
    <string name="map">Map</string>
    <string name="profile">Profile</string>
    <string name="title_activity_maps">Map</string>
    <string name="drawer_open">drawer open</string>
    <string name="drawer_close">drawer close</string>
    <string name="create_event">Create Event</string>
    <string name="title">Title</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="place">Place</string>
    <string name="description">Description</string>
    <string-array name="event_types_array">
        <item>Playground</item>
        <item>Library</item>
        <item>Swimming Pool</item>
    </string-array>
</resources>
