<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/createAccount"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/jungle"
    tools:context="p8.group3.ida.aau.p8_group3.LoginPage">


    <RelativeLayout

        android:id="@+id/loginBrownBG"
        android:layout_width="280dp"
        android:layout_height="420dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:background="@drawable/shape">

        <!--


        COMMENT SPACE


         -->


        <TextView
            android:id="@+id/loginTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="17dp"
            android:background="@color/same"
            android:text="@string/chimp"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="35sp"
            android:visibility="visible" />

        <TextView
            android:id="@+id/purpose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/loginTitle"
            android:layout_centerHorizontal="true"
            android:background="@color/same"
            android:text="@string/socialising_for_parents"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:visibility="visible" />


        <EditText
            android:id="@+id/login2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:drawableStart="@drawable/usericon"
            android:hint="@string/user_name"
            android:inputType="textPersonName"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:layout_below="@+id/purpose"
            android:layout_marginTop="15dp"
            android:layout_alignEnd="@+id/next"
            android:layout_alignStart="@+id/next" />


        <EditText
            android:id="@+id/password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/password"
            android:drawableStart="@drawable/lock"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:layout_below="@+id/login2"
            android:layout_marginTop="20dp"
            android:layout_alignStart="@+id/login2"
            android:layout_alignEnd="@+id/login2" />


        <EditText
            android:id="@+id/repeat_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/lock"
            android:ems="10"
            android:hint="@string/repeat_password"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:layout_below="@+id/password"
            android:layout_alignStart="@+id/password"
            android:layout_marginTop="20dp"
            android:layout_alignEnd="@+id/next" />


        <EditText
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/email_address"
            android:drawableStart="@drawable/email"
            android:textSize="14sp"
            android:inputType="textEmailAddress"
            android:layout_below="@+id/repeat_password"
            android:textAllCaps="false"
            android:layout_marginTop="20dp"
            android:layout_alignStart="@+id/repeat_password"
            android:layout_alignEnd="@+id/next" />


        <Button
            android:id="@+id/next"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@color/mustard"
            android:text="@string/next"
            android:textAllCaps="false"

            android:textColor="@color/black" />


    </RelativeLayout>



</RelativeLayout>