<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/jungle"
    tools:context="p8.group3.ida.aau.p8_group3.LoginPage">



    <ImageView
        android:id="@+id/background_image"
        android:layout_width="500dp"
        android:layout_height="500dp"
        android:src="@drawable/monkey"
        android:elevation="15sp"
        android:layout_marginBottom="322dp"
        android:layout_alignBottom="@+id/loginBrownBG"
        android:layout_alignEnd="@+id/loginBrownBG"
        android:layout_marginEnd="46dp" />


    <RelativeLayout

        android:id="@+id/loginBrownBG"
        android:layout_width="280dp"
        android:layout_height="350dp"
        android:background="@drawable/shape"
        android:layout_marginBottom="30dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true">

<!--


COMMENT SPACE
            android:contextClickable="true"
            

 -->

        <TextView
            android:id="@+id/loginTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/same"
            android:text="@string/chimp"
            android:textSize="35sp"
            android:textAllCaps="false"
            android:visibility="visible"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:layout_marginTop="17dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />

        <TextView
            android:id="@+id/purpose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/same"
            android:text="@string/socialising_for_parents"
            android:textSize="12sp"
            android:textAllCaps="false"
            android:visibility="visible"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:layout_below="@+id/loginTitle"
            android:layout_centerHorizontal="true" />



        <EditText
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="17dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:drawableStart="@drawable/usericon"
            android:hint="@string/user_name"
            android:textColor="@color/white"
            android:layout_alignEnd="@+id/forgotPassword"
            android:textSize="14sp"
            android:layout_above="@+id/password"
            android:layout_alignStart="@+id/signIn" />

        <TextView
            android:id="@+id/forgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/same"
            android:text="@string/forgot_my_password"
            android:textSize="10sp"
            android:textAllCaps="false"
            android:visibility="visible"
            android:textColor="@color/white"

            android:layout_above="@+id/signIn"
            android:layout_alignEnd="@+id/signIn"
            android:layout_marginBottom="12dp" />


        <EditText
            android:id="@+id/password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            android:textSize="14sp"
            android:drawableStart="@drawable/lock"
            android:hint="@string/password"

            android:textColor="@color/white"
            android:layout_marginBottom="12dp"
            android:layout_above="@+id/forgotPassword"
            android:layout_alignEnd="@+id/forgotPassword"
            android:layout_alignStart="@+id/login" />

        <Button
            android:id="@+id/signIn"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/mustard"
            android:text="@string/sign_in"
            android:textAllCaps="false"
            android:layout_above="@+id/createAccount"
            android:textColor="@color/black"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="6dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"/>

        <Button
            android:id="@+id/createAccount"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/mustard"
            android:text="@string/create_account"
            android:textColor="@color/black"
            android:textAllCaps="false"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"/>


    </RelativeLayout>

</RelativeLayout>
