<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/CreateAccount2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/jungle"
    tools:context="p8.group3.ida.aau.p8_group3.Presenter.LoginPage">


    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/loginBrownBG"
        android:layout_marginStart="50dp"
        android:elevation="15sp"
        android:src="@drawable/monkey" />

    <RelativeLayout

        android:id="@+id/loginBrownBG"
        android:layout_width="280dp"
        android:layout_height="420dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:background="@drawable/shape">



        <!--


        COMMENT SPACE
android:contextClickable="true"

         -->



        <TextView
            android:id="@+id/loginTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="17dp"
            android:background="@color/same"
            android:text="@string/chimp"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="35sp"
            android:visibility="visible" />

        <TextView
            android:id="@+id/purpose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/loginTitle"
            android:layout_centerHorizontal="true"
            android:background="@color/same"
            android:text="@string/socialising_for_parents"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:visibility="visible" />

        <EditText
            android:id="@+id/editCity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:textSize="14sp"
            android:hint="@string/city_of_residence"
            android:inputType="text"
            android:layout_above="@+id/numberOfChildren"
            android:layout_alignStart="@+id/finish"
            android:layout_alignEnd="@+id/finish"
            />

        <EditText
            android:id="@+id/numberOfChildren"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/number_of_children"
            android:inputType="number"
            android:textSize="14sp"
            android:layout_marginTop="25dp"
            android:layout_centerVertical="true"
            android:layout_alignStart="@+id/editCity"
            android:layout_alignEnd="@+id/finish"/>

        <EditText
            android:id="@+id/ageOfChildren"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/age_of_children"
            android:inputType="text"
            android:textSize="14sp"
            android:layout_marginTop="25dp"
            android:layout_below="@+id/numberOfChildren"
            android:layout_alignStart="@+id/numberOfChildren"
            android:layout_alignEnd="@+id/finish"/>





        <Button
            android:id="@+id/finish"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@color/mustard"
            android:text="@string/finish"
            android:textAllCaps="false"

            android:textColor="@color/black" />


    </RelativeLayout>




</RelativeLayout>