<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/createAccount"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/jungle"
    tools:context="p8.group3.ida.aau.p8_group3.LoginPage">


    <RelativeLayout

        android:id="@+id/loginBrownBG"
        android:layout_width="320dp"
        android:layout_height="520dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:background="@drawable/shape">

        <TextView
            android:id="@+id/createEventTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:background="@color/same"
            android:text="@string/create_event"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:visibility="visible" />

        <EditText
            android:id="@+id/eventTitle"
            android:layout_width="500dp"
            android:layout_height="45dp"
            android:layout_below="@+id/createEventTitle"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/title" />

        <EditText
            android:id="@+id/eventDate"
            android:layout_width="500dp"
            android:layout_height="45dp"
            android:layout_below="@+id/eventTitle"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:ems="10"
            android:inputType="date"
            android:text="@string/date"/>

        <EditText
            android:id="@+id/eventTime"
            android:layout_width="500dp"
            android:layout_height="45dp"
            android:layout_below="@+id/eventDate"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:ems="10"
            android:inputType="time"
            android:text="@string/time"/>

        <EditText
            android:id="@+id/eventAddress"
            android:layout_width="500dp"
            android:layout_height="45dp"
            android:layout_below="@+id/eventTime"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:ems="10"
            android:inputType="textPostalAddress"
            android:text="@string/place"/>

        <Spinner
            android:id="@+id/eventType"
            android:layout_width="500dp"
            android:layout_height="45dp"
            android:layout_below="@id/eventAddress"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginTop="10dp"
            android:spinnerMode="dropdown"
            android:visibility="visible" />

        <EditText
            android:id="@+id/eventDescription"
            android:layout_width="500dp"
            android:layout_height="100dp"
            android:layout_below="@+id/eventAddress"
            android:layout_marginTop="50dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginBottom="20dp"
            android:ems="10"
            android:inputType="textMultiLine"
            android:text="@string/description"/>

        <Button
            android:id="@+id/createEventButton"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@color/mustard"
            android:text="@string/create_event"
            android:textAllCaps="false"
            android:textColor="@color/black" />

    </RelativeLayout>


</RelativeLayout>